src/metrics/snapshots/big_code_analysis__metrics__abc__tests__perl_regex_match_operators_count_conditions.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 3,
  "branches": 1,
  "conditions": 2,
  "magnitude": 3.7416573867739413,
  "assignments_average": 1.5,
  "branches_average": 0.5,
  "conditions_average": 1.0,
  "assignments_min": 0,
  "assignments_max": 3,
  "branches_min": 0,
  "branches_max": 1,
  "conditions_min": 0,
  "conditions_max": 2
}
