src/metrics/snapshots/big_code_analysis__metrics__abc__tests__perl_short_circuit_and_ternary_count_conditions.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 7.0,
  "branches": 0.0,
  "conditions": 7.0,
  "magnitude": 9.899494936611665,
  "assignments_average": 3.5,
  "branches_average": 0.0,
  "conditions_average": 3.5,
  "assignments_min": 0.0,
  "assignments_max": 7.0,
  "branches_min": 0.0,
  "branches_max": 0.0,
  "conditions_min": 0.0,
  "conditions_max": 7.0
}
