src/metrics/snapshots/big_code_analysis__metrics__abc__tests__perl_short_circuit_not_counted_directly_ternary_counts.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 7,
  "branches": 0,
  "conditions": 12,
  "magnitude": 13.892443989449804,
  "value": 0.0,
  "assignments_average": 3.5,
  "branches_average": 0.0,
  "conditions_average": 6.0,
  "assignments_min": 0,
  "assignments_max": 7,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 12
}
