src/metrics/snapshots/big_code_analysis__metrics__abc__tests__php_complex_function.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 2,
  "branches": 3,
  "conditions": 2,
  "magnitude": 4.123105625617661,
  "assignments_average": 1.0,
  "branches_average": 1.5,
  "conditions_average": 1.0,
  "assignments_min": 0,
  "assignments_max": 2,
  "branches_min": 0,
  "branches_max": 3,
  "conditions_min": 0,
  "conditions_max": 2
}
